--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,8 +16,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest coverage build pyinstaller
+          pip install pytest coverage build pyinstaller flake8
           pip install -e .
+      - name: Run flake8
+        run: |
+          flake8
       - name: Run tests
         run: |
           pytest
