--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,20 +16,20 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest coverage build pyinstaller flake8
+          pip install -r requirements-dev.txt
           pip install -e .
+      - name: Check formatting
+        run: black --check .
       - name: Run flake8
-        run: |
-          flake8
+        run: flake8
       - name: Run tests
-        run: |
-          pytest
+        run: pytest
       - name: Build wheel and sdist
-        run: |
-          python -m build
+        run: python -m build
+      - name: Check package
+        run: twine check --strict dist/*
       - name: Build standalone binary
-        run: |
-          ./scripts/package.sh
+        run: ./scripts/package.sh
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
