--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Run tests
         run: |
           pytest --cov=smtpburst --cov-report=xml
-          coverage-badge -o coverage.svg
+          coverage-badge -f -o coverage.svg
       - name: Upload coverage badge
         uses: actions/upload-artifact@v4
         with:
