--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 max-line-length = 88
 extend-ignore = E203,W503
+exclude = .venv,dist,build
 per-file-ignores =
     smtpburst/__init__.py:F401
     tests/*:E402
