--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,81 +2,34 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master, main ]
   pull_request:
+    branches: [ master, main ]
 
 jobs:
-  format:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-      - name: Check formatting
-        run: black --check .
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-      - name: Run flake8
-        run: flake8
-
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.11", "3.12", "3.13"]
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: ${{ matrix.python-version }}
+          cache: "pip"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-          pip install -e .
+          python -m pip install -r requirements-dev.txt
+          python -m pip install -e .
+      - name: Lint (black)
+        run: black --check .
+      - name: Lint (flake8)
+        run: flake8
       - name: Run tests
-        run: |
-          pytest --cov=smtpburst --cov-report=xml
-          coverage-badge -f -o coverage.svg
-      - name: Upload coverage badge
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-badge
-          path: coverage.svg
-
-  build:
-    runs-on: ubuntu-latest
-    needs: [format, lint, test]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements-dev.txt
-          pip install -e .
-      - name: Build wheel and sdist
+        run: pytest -q
+      - name: Build packages
         run: python -m build
-      - name: Check package
-        run: twine check --strict dist/*
-      - name: Build standalone binary
-        run: ./scripts/package.sh
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: smtp-burst-artifacts
-          path: dist/
+
